--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>TRtemplate</title>
     <script>
         
-        location.href = "/TRpackage/scriptLibrary/index.html";    
+        location.href = "./TRpackage/scriptLibrary/index.html";    
         
     </script>
 </head>
