--- a/scriptLibrary/demo/utility/changeOnceFn/ex01.html
+++ b/scriptLibrary/demo/utility/changeOnceFn/ex01.html
@@ -10,9 +10,9 @@
   .width_check.is_pc {  background-color: blueviolet; }
   .width_check.is_tb {  background-color: cornflowerblue;}
   .width_check.is_mb {  background-color: darkseagreen;}
-
   </style> 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpUtility.js"></script>
 
   <!-- resize -->
