--- a/jqueryPlugin/demo/gallery/swiper-2.7.6/ex01.html
+++ b/jqueryPlugin/demo/gallery/swiper-2.7.6/ex01.html
@@ -18,7 +18,7 @@
 		.gallery_view .pagination .swiper-pagination-switch { display: inline-block; width: 10px; height: 10px; border-radius: 10px; background: #777; margin: 0 5px; cursor: pointer; } 
 		.gallery_view .pagination .swiper-pagination-switch.swiper-active-switch {  background: #fff; } 
 	</style>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script src="./js/idangerous.swiper-2.7.5.min.js"></script>
 	<script type="text/javascript">
 	
