--- a/jqueryPlugin/demo/typo/textillate/ex01.html
+++ b/jqueryPlugin/demo/typo/textillate/ex01.html
@@ -6,7 +6,7 @@
   <title>Textillate | TR package</title>
   <link href="../../../../asset/js/libs/textillate/css/style.css" rel="stylesheet">
   <link href="../../../../asset/js/libs/textillate/css/animate.css" rel="stylesheet">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script src="../../../../asset/js/libs/textillate/jquery.lettering.js"></script>
   <script src="../../../../asset/js/libs/textillate/jquery.textillate.js"></script>
   <style type="text/css">
