--- a/scriptLibrary/demo/gallery/swiper/ex01.html
+++ b/scriptLibrary/demo/gallery/swiper/ex01.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	
 	<link rel="stylesheet" href="./css/swiper.css">
 	<link rel="stylesheet" href="./css/style.css"/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script src="./js/swiper.js"></script>
 	
 	<script type="text/javascript">
