--- a/scriptLibrary/demo/utility/changeOnceFnFn/ex01.html
+++ b/scriptLibrary/demo/utility/changeOnceFnFn/ex01.html
@@ -8,7 +8,7 @@
     .width_check.true {  background-color:cornflowerblue;}
         
 	</style> 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="../../../../asset/js/libs/trpUtility.js"></script>
 	<script>
 	$(document).ready(function(){
