--- a/jqueryPlugin/demo/gallery/slick/ex02.html
+++ b/jqueryPlugin/demo/gallery/slick/ex02.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	
 	<link href="./css/style.css" type="text/css" rel="stylesheet" />
 	<link rel="stylesheet" href="../../../../asset/js/libs/slick/slick.css">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script src="../../../../asset/js/libs/slick/slick.js"></script>
     <style type="text/css">
         * { margin:0; padding:0;}        
