--- a/jqueryPlugin/demo/gallery/swiper-2.7.6/ex02.html
+++ b/jqueryPlugin/demo/gallery/swiper-2.7.6/ex02.html
@@ -25,7 +25,7 @@
 		#products .pagination li.current a .bg_gray span { display: block; width: 100%; height: 100%; zoom: 1; filter: alpha(opacity=30); opacity: 0.3; background: #000;}
 
 	</style>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script src="./js/idangerous.swiper-2.7.5.min.js"></script>
 	<script type="text/javascript">
 	
