--- a/jqueryPlugin/demo/gallery/swiper-2.7.6/ex03.html
+++ b/jqueryPlugin/demo/gallery/swiper-2.7.6/ex03.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	
 	<link rel="stylesheet" href="./css/style.css"/>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script src="./js/idangerous.swiper-2.7.5.min.js"></script>
 	<script type="text/javascript">
 	
