--- a/jqueryPlugin/demo/gallery/swiper-2.7.6/ex05.html
+++ b/jqueryPlugin/demo/gallery/swiper-2.7.6/ex05.html
@@ -14,7 +14,7 @@
 	    display: flex;
 		}
 	</style>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script src="./js/idangerous.swiper-2.7.5.min.js"></script>
 	
 	<script type="text/javascript">
