--- a/jqueryPlugin/demo/gallery/swiper-2.7.6/ex_01.html
+++ b/jqueryPlugin/demo/gallery/swiper-2.7.6/ex_01.html
@@ -93,7 +93,7 @@ body {
     </div>
     <div class="pagination"></div>
   </div>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script src="./js/idangerous.swiper-2.7.5.min.js"></script>
   <script>
   var mySwiper = new Swiper('.swiper-container',{
