--- a/scriptLibrary/demo/gallery/bxSlider/ex01.html
+++ b/scriptLibrary/demo/gallery/bxSlider/ex01.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	
 	<link href="./css/style.css" type="text/css" rel="stylesheet" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
 	<script src="./js/jquery.bxslider.min.js"></script>
 	<script type="text/javascript">
 	
