--- a/scriptLibrary/demo/menu/quick/ex01.html
+++ b/scriptLibrary/demo/menu/quick/ex01.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>quick_menu</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script src="../../../../asset/js/libs/trpMenu.js"></script>
   <style type="text/css">
     .contents { width:500px; height:1500px; border:1px solid blue; }
