--- a/scriptLibrary/demo/menu/toggleOverflow/ex01.html
+++ b/scriptLibrary/demo/menu/toggleOverflow/ex01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpMenu.js"></script>
   <style>
     .family_site {}
