--- a/scriptLibrary/demo/unit/ratioSize/ex01.html
+++ b/scriptLibrary/demo/unit/ratioSize/ex01.html
@@ -3,7 +3,7 @@
 <head>
 	<title>font-resize</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>	
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>	
 	<script type="text/javascript" src="../../../../asset/js/libs/trpUnit.js"></script>
 	<style type="text/css">
 		div { border:1px dashed red;}
