--- a/scriptLibrary/demo/utils/fnNumberUtils/ex01.html
+++ b/scriptLibrary/demo/utils/fnNumberUtils/ex01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpFnNumberUtils.js"></script>
   <link rel="stylesheet" href="../../../../asset/css/trpBase.css">
 </head>
