--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -179,7 +179,8 @@
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollSync/default.html?dep1=8&dep2=0">trpScrollSync</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollPositionClass/default.html?dep1=8&dep2=1">trpScrollPositionClass</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollPositionFn/default.html?dep1=8&dep2=2">trpScrollPositionFn</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=8&dep2=3">trpColItemH</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollActive/default.html?dep1=8&dep2=3">trpScrollActive</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=8&dep2=4">trpColItemH</a></li>
       </ul>
     </li>
     
@@ -210,12 +211,12 @@
       </h2>
       <ul class="sublist">
         <li><a href="/TRpackage/scriptLibrary/demo/utility/net/default.html?dep1=11&dep2=0">net (trpBrowser)</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnce/default.html?dep1=11&dep2=1">fn (trpUtilityChangeOnce)</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/classBubbleCheck/default.html?dep1=11&dep2=2">fn (trpClassBubbleCheck)</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFn/default.html?dep1=11&dep2=3">trpUtilityChangeOnceFn</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFnFn/default.html?dep1=11&dep2=4">trpUtilityChangeOnceFnFn</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/removeClassPrefix/default.html?dep1=11&dep2=5">trpRemoveClassPrefix</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/utility/trpScrolltop/default.html?dep1=11&dep2=6">trpScrolltop</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/trpScrolltop/default.html?dep1=11&dep2=1">fn (trpScrolltop)</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnce/default.html?dep1=11&dep2=2">fn (trpUtilityChangeOnce)</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/classBubbleCheck/default.html?dep1=11&dep2=3">fn (trpClassBubbleCheck)</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFn/default.html?dep1=11&dep2=4">trpUtilityChangeOnceFn</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/changeOnceFnFn/default.html?dep1=11&dep2=5">trpUtilityChangeOnceFnFn</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/utility/removeClassPrefix/default.html?dep1=11&dep2=6">trpRemoveClassPrefix</a></li>
       </ul>
     </li>
     
