time counter 추가

--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -146,6 +146,7 @@
       <ul class="sublist">
         <li><a href="/TRpackage/scriptLibrary/demo/unit/ratioSize/default.html?dep1=5&dep2=0">trpRatioSize</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/unit/newsRolling/default.html?dep1=5&dep2=1">trpNewsRolling</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/unit/timeCounter/default.html?dep1=5&dep2=2">timeCounter</a></li>
       </ul>
     </li>
 
