--- a/jqueryPlugin/demo/media/youtube/ex02.html
+++ b/jqueryPlugin/demo/media/youtube/ex02.html
@@ -16,7 +16,7 @@
     <!-- 1. The <iframe> (and video player) will replace this <div> tag. -->
 	<div id="player"></div>
 	<div class="menu">
-		<button  data-urlid= "9II_GQJ7mKo" class="js-song_play">폴킴 - 모든 날, 모든 순간</button>
+		<button  data-urlid= "P94SfHo2Gts" class="js-song_play">폴킴 - 모든 날, 모든 순간</button>
 		<button  data-urlid= "YBzJ0jmHv-4" class="js-song_play">폴킴 - 너를 만나</button>
 		<button  data-urlid= "9jFZdu0zTEA" class="js-song_play">폴킴 - 비</button>
 	</div>
@@ -47,8 +47,9 @@
 					height: '390',
 					width: '640',
 					videoId: '9II_GQJ7mKo',					
-					playerVars: { 'start': 0, 'autoplay': 0, 'controls': 0 , 'rel':0, 'ytp-pause-overlay':0 }, 
+					playerVars: { 'start': 0, 'autoplay': 0, 'controls': 0 , 'mute':0, 'rel':0, 'ytp-pause-overlay':0 }, 
 					// start : 시작위치(초), autoplay: 자동시행여부(0 기본값 안함, 1 함), controls: 컨트롤러 여부(0 표시안함, 1 기본값표시 ), 
+					// mute: 음소거 ( 0 기본값 안함, 1 함), 
 					// rel: 동영상종료후 관련영상 표시여부 ( 0 안함, 1 기본값 함), 
 					// ytp-pause-overlay: 동영상 일시정지에서 관련영상표기여부( 0표시안함, 1 기본값 함 )
 					events: {
