--- a/jqueryPlugin/demo/utility/screenCapture/ex02.html
+++ b/jqueryPlugin/demo/utility/screenCapture/ex02.html
@@ -9,7 +9,7 @@
       
       
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script> -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
     <script src="../../../../asset/js/libs/html2canvas/html2canvas_custom.js"></script>
     <script src="http://www.nihilogic.dk/labs/canvas2image/canvas2image.js"></script>
 
