--- a/scriptLibrary/demo/built-in/ellipsis/ex01.html
+++ b/scriptLibrary/demo/built-in/ellipsis/ex01.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>trpEllipsis | TR package</title>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpEllipsis.js"></script>
 <style>
 	html, body { margin:0; padding:0; }	
