--- a/scriptLibrary/demo/built-in/ellipsis/ex_02.html
+++ b/scriptLibrary/demo/built-in/ellipsis/ex_02.html
@@ -9,7 +9,7 @@
 		.trpFill { overflow: hidden; }
 
 	</style>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+	<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 	<style>
 		 .box {
 		   height: 4.5em;
