--- a/scriptLibrary/demo/fill/fillFn/ex02.html
+++ b/scriptLibrary/demo/fill/fillFn/ex02.html
@@ -11,7 +11,7 @@
 	
 	
 </style>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpFill.js"></script>
 
 
