--- a/scriptLibrary/demo/form/input_checkbox/ex01.html
+++ b/scriptLibrary/demo/form/input_checkbox/ex01.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <link rel="stylesheet" type="text/css" href="../../../../asset/css/trpBase.css" media="all" />
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../../../../asset/js/libs/trpForm.js"></script>
     
 </head>
