--- a/scriptLibrary/demo/form/tooltip/ex01.html
+++ b/scriptLibrary/demo/form/tooltip/ex01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>trpTip | TR package</title>
-  <script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+  <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpForm.js"></script>
   
   <style>
