--- a/scriptLibrary/demo/unit/timeCounter/ex01.html
+++ b/scriptLibrary/demo/unit/timeCounter/ex01.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>trpTimeCounter | TR package</title>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../../../../asset/js/libs/trpUnit.js"></script>
 <style>
   dl dt { display: inline-block; width: 100px;}
