--- a/scriptLibrary/demo/utility/net/ex_04.html
+++ b/scriptLibrary/demo/utility/net/ex_04.html
@@ -7,7 +7,7 @@
 	
 </style>
 <!-- <script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js"></script> -->
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
+<script type="text/javascript" src="../../../../asset/js/libs/jquery-1.12.1.min.js" charset="UTF-8"></script>
 
 
 <script type="text/javascript">	 
