--- a/responsive/demo/table/scroll/ex01.html
+++ b/responsive/demo/table/scroll/ex01.html
@@ -34,14 +34,14 @@
     .trp.table-data-type1 .bd-tn { border-top: none; }
     .trp.table-data-type1 .bd-bn { border-bottom: none; }
     
-    .table-responsive_scroll { min-height: .01%; overflow-x: auto; white-space: nowrap;  -webkit-overflow-scrolling: touch; }
+    .table-responsive_scroll { min-height: .01%; overflow-x: auto; -webkit-overflow-scrolling: touch; white-space: nowrap; }
  
   </style>
 </head>
 <body>
   
   <div class="container">
-    <h2>반응형 테이블 (x-scroll)</h2>  
+    <h2>반응형 테이블 (x-scroll) 줄바꿈 안됨. </h2>  
     
     <div class="table-responsive_scroll">
       <table class="trp table-data-type1">
