--- a/responsive/lnb.html
+++ b/responsive/lnb.html
@@ -62,7 +62,8 @@ $(document).ready(function(){
 			<h2 class="nav_h2"><span>table</span><p class="dep2-more" ><a href="javascript:return false;"><span>+</span><span style="display:none" >-</span></a></p></h2>
 			<ul class="sublist">
 				<li><a href="/TRpackage/responsive/demo/table/scroll/default.html?dep1=2&dep2=0"	 >scroll-x</a></li>	
-				<li><a href="/TRpackage/responsive/demo/table/list/default.html?dep1=2&dep2=1"	 >lsit 2col</a></li>	
+				<li><a href="/TRpackage/responsive/demo/table/fixed/default.html?dep1=2&dep2=1"	 >fixed</a></li>	
+				<li><a href="/TRpackage/responsive/demo/table/list/default.html?dep1=2&dep2=2"	 >lsit 2col</a></li>	
 				<!-- <li>topMenu</li> -->
 			</ul>
 		</li>
