--- a/responsive/demo/table/fixed/ex01.html
+++ b/responsive/demo/table/fixed/ex01.html
@@ -3,30 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>scroll Y</title>
-  <style>
-  .table {
-    table-layout:fixed;
-    width:100%;
-    text-align:center;
-  }
-  .table th { 
-    background:#ccc;
-  }
-  .table td, .table th {
-    padding:10px 20px;
-    border-top:1px solid #ccc;
-    word-break:break-all
-  }
+  <link rel="stylesheet" type="text/css"  href="../../../../asset/css/trpBase.css" media="all" />
+  <style type="text/css">
+  .table-wrap {position: relative; border-top: 2px solid #000; }
+  .table-box .trp.table-data-type1 { border-top: 0;}
+  .table-box .trp.table-data-type1 tbody td:first-child { text-align: center; }
   @media screen and (max-width:768px) {
-    /*vertical*/
-    .table-wrap {
-      position:relative;
-      padding-top:42px;
-    }
+    /* vertical */
+    .table-wrap { padding-top:45px; }
     .table-box--vertical {
       overflow-y:auto;
       max-height:200px;
+      /* -ms-overflow-style: none; */ /* ie 스크롤 숨김 */
     }
+    /* .table-box--vertical::-webkit-scrollbar { display:none; } */ /* 웹킷 스크롤 숨김 */
     .table-box--vertical thead {
       display:table;
       position:absolute;
@@ -37,10 +27,10 @@
   </style>
 </head>
 <body>
-  <h1>Vertical</h1>
+  <h1 class="trp h1">Vertical</h1>
   <div class="table-wrap">
     <div class="table-box table-box--vertical">
-      <table class="table table--vertical" cellspacing="0" cellpadding="0">
+      <table class="trp table-data-type1 " cellspacing="0" cellpadding="0">
         <thead>
         <tr>
           <th>1월</th>
