--- a/responsive/demo/table/scroll/ex02.html
+++ b/responsive/demo/table/scroll/ex02.html
@@ -41,7 +41,7 @@
 <body>
   
   <div class="container">
-    <h2>반응형 테이블 (x-scroll)</h2>  
+    <h2>반응형 테이블 (x-scroll) 줄바꿈 됨.</h2>  
     
     <div class="table-responsive_scroll">
       <table class="trp table-data-type1">
