jPlayer default 수정

--- a/jqueryPlugin/demo/media/jPlayer/default.html
+++ b/jqueryPlugin/demo/media/jPlayer/default.html
@@ -18,7 +18,7 @@
 		<!-- s: 스크립드 설명 -->
 		<div class="desc_wapper">
 			<h1 class="desc_title">jPlayer</h1>
-			<p>이미지 시컨스를 연속재생 시켜줍니다. <br />
+			<p>동영상 재생 플러그인 <br />
 				link API : <a href="http://jplayer.org/latest/developer-guide/" target="_blank" >http://jplayer.org/latest/developer-guide/</a>
 			</p>
 			
