--- a/jqueryPlugin/lnb.html
+++ b/jqueryPlugin/lnb.html
@@ -108,6 +108,7 @@ $(document).ready(function(){
 				<li><a href="/TRpackage/jqueryPlugin/demo/media/vimeo/default.html?dep1=4&dep2=1">Vimeo</a></li>
 				<li><a href="/TRpackage/jqueryPlugin/demo/media/jsmovie/default.html?dep1=4&dep2=2">jsmovie</a></li>
 				<li><a href="/TRpackage/jqueryPlugin/demo/media/jPlayer/default.html?dep1=4&dep2=3">jPlayer</a></li>	
+				<li><a href="/TRpackage/jqueryPlugin/demo/media/videojs/default.html?dep1=4&dep2=4">videojs</a></li>	
 			</ul>
 		</li>
                     
