--- a/jqueryPlugin/demo/media/videojs/default.html
+++ b/jqueryPlugin/demo/media/videojs/default.html
@@ -103,6 +103,45 @@
 					</tr>				
 					</tbody>
 				</table>
+
+
+                <table class="table_col" summary="Media events 설명 ">
+					<caption>Media events</caption>
+					<colgroup>
+						<col width="150">
+						<col width="">		
+					</colgroup>
+					<tbody>
+					<tr>
+						<th scope="col">Media events 이름</th>
+						<th scope="col">Media events 설명</th>
+					</tr>
+					<tr>
+						<td>loadstart</td>
+						<td>미디어가 로드 시작할대.</td>		
+					</tr>		
+					<tr>
+						<td>play</td>
+						<td>일시 정지 된 후 미디어 재생이 시작될 때 전송됩니다</td>		
+					 </tr>
+					<tr>
+						<td>pause</td>
+						<td>재생이 일시 정지되면 보냅니다.</td>
+					</tr>
+					<tr>
+						<td>progress</td>
+						<td>미디어를 다운로드하는 진행 상황을 이해 관계자에게 알리기 위해 주기적으로 전송됩니다</td>
+					</tr>
+					<tr>
+						<td>ended</td>
+						<td>재생이 완료되면 전송됩니다.</td>
+					</tr>
+					<tr>
+						<td>error</td>
+						<td>오류가 발생하면 전송됩니다. 요소의 error속성에는 자세한 정보가 들어 있습니다. 자세한 내용은 <a href="https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/error" target="_blank">HTMLMediaElement.error  를 참조하십시오.</a></td>
+					</tr>
+					</tbody>
+				</table>
 			
 			</div>
 		</div>
