--- a/jqueryPlugin/demo/gallery/swiper/default.html
+++ b/jqueryPlugin/demo/gallery/swiper/default.html
@@ -112,6 +112,19 @@
 						<td>el(태그 선텍자), type ["bullets", "fraction", "progressbar", "custom"] </td>
 					</tr>
 					<tr>
+						<td>paginationClickable: true,,</td>
+						<td>도트 클릭여부</td>
+					</tr>
+					<tr>
+						<td>
+							navigation: {
+								nextEl: ".swiper-button-next",
+								prevEl: ".swiper-button-prev",
+							},
+						</td>
+						<td>좌우버튼 </td>
+					</tr>
+					<tr>
 						<td>breakpoints</td>
 						<td> <strong>반응형</strong>
 							<pre>
