--- a/jqueryPlugin/demo/gallery/swiper/default.html
+++ b/jqueryPlugin/demo/gallery/swiper/default.html
@@ -108,8 +108,11 @@
 						<td>(1000 = 1초) 로시간을 정의하면 자동으로 슬라이드를 합니다.</td>
 					</tr>
 					<tr>
-						<td>pagination: {el: '.swiper-pagination',type: 'bullets',},</td>
-						<td>el(태그 선텍자), type ["bullets", "fraction", "progressbar", "custom"] </td>
+						<td>pagination: </td>
+						<td>el(태그 선텍자), type ["bullets", "fraction", "progressbar", "custom"] 
+								<br />
+								pagination: {el: '.swiper-pagination',type: 'bullets',},
+						</td>
 					</tr>
 					<tr>
 						<td>paginationClickable: true,,</td>
@@ -117,12 +120,14 @@
 					</tr>
 					<tr>
 						<td>
+							navigation: 
+						</td>
+						<td>좌우버튼  <br />
 							navigation: {
 								nextEl: ".swiper-button-next",
 								prevEl: ".swiper-button-prev",
 							},
 						</td>
-						<td>좌우버튼 </td>
 					</tr>
 					<tr>
 						<td>breakpoints</td>
