--- a/jqueryPlugin/demo/gallery/swiper/default.html
+++ b/jqueryPlugin/demo/gallery/swiper/default.html
@@ -38,6 +38,8 @@
 					<dd><span class="icon"></span>swiper-4.5.0 스크립트 : <a href="./js/swiper.min.js">swiper.js</a> </dd>
 					<dd><span class="icon"></span>swiper-3.4.2 버젼 : <a href="../swiper-3.4.2/default.html?dep1=1&dep2=0">swiper-3.4.2</a> </dd>
 					<dd><span class="icon"></span>swiper-2.7.6 버젼 : <a href="../swiper-2.7.6/default.html?dep1=1&dep2=0">swiper-2.7.6</a> </dd>
+					<dd><span class="icon"></span>ex03 : <a href="ex03.html">ex03</a> </dd>
+					<dd><span class="icon"></span>ex04 : <a href="ex04.html">ex04</a> </dd>
 
 				</dl>
 
