--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -182,7 +182,8 @@
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollPositionClass/default.html?dep1=8&dep2=2">trpScrollPositionClass</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollPositionFn/default.html?dep1=8&dep2=3">trpScrollPositionFn</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollActive/default.html?dep1=8&dep2=4">trpScrollActive</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=8&dep2=5">trpColItemH</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/scrollActivePer/default.html?dep1=8&dep2=5">trpScrollActivePer</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/layout/colItmeH/default.html?dep1=8&dep2=6">trpColItemH</a></li>
       </ul>
     </li>
     
