--- a/jqueryPlugin/lnb.html
+++ b/jqueryPlugin/lnb.html
@@ -87,6 +87,7 @@ $(document).ready(function(){
 			</h2>
 			<ul class="sublist">				
 				<li><a href="/TRpackage/jqueryPlugin/demo/layout/masonry/default.html?dep1=2&dep2=0">레이아웃이동(jQuery Masonry)</a></li>
+				<li><a href="/TRpackage/jqueryPlugin/demo/layout/stickyfill/default.html?dep1=2&dep2=1">sticky 속성 범용(stickyfill)</a></li>
 			</ul>
 		</li>
 		
