--- a/scriptLibrary/demo/menu/tabSimpleMenu/ex01.html
+++ b/scriptLibrary/demo/menu/tabSimpleMenu/ex01.html
@@ -18,8 +18,8 @@
   </style>
   <script type="text/javascript">
     $(document).ready(function(){       		
-      $(".tabs").trpTabMenu(".btn",".cons" ,"on");    					// on 이름은 변경 가능.
-      //$(".tabs").trpTabMenu(".btn",".cons" ,"on").setBtn(1);    		// on 이름은 변경 가능.
+      $(".tabs").trpTabSimpleMenu(".btn",".cons" ,"on");    					// on 이름은 변경 가능.
+      //$(".tabs").trpTabSimpleMenu(".btn",".cons" ,"on").setBtn(1);    		// on 이름은 변경 가능.
     }) // ready 
   </script>
 </head>
