--- a/scriptLibrary/demo/menu/tabSimpleMenu/ex02.html
+++ b/scriptLibrary/demo/menu/tabSimpleMenu/ex02.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="../../../../asset/js/libs/trpMenu.js"></script>
   <script type="text/javascript">
     $(document).ready(function(){       		
-      var tabMenu = $(".tabs1").trpTabMenu(".btn",".cons" ,"on");    		// on 이름은 변경 가능.
+      var tabMenu = $(".tabs1").trpTabSimpleMenu(".btn",".cons" ,"on");    		// on 이름은 변경 가능.
       tabMenu.setBtn([0,1]);													// 활성화 체크
     }) // ready 
   </script>
