--- a/scriptLibrary/lnb.html
+++ b/scriptLibrary/lnb.html
@@ -71,7 +71,7 @@
       <ul class="sublist">
         <li><a href="/TRpackage/scriptLibrary/demo/menu/quick/default.html?dep1=0&dep2=0">quick menu</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/menu/tabSimple/default.html?dep1=0&dep2=1">tab trpTabSimple</a></li>
-        <li><a href="/TRpackage/scriptLibrary/demo/menu/tab/default.html?dep1=0&dep2=2">tab menu</a></li>
+        <li><a href="/TRpackage/scriptLibrary/demo/menu/tabSimpleMenu/default.html?dep1=0&dep2=2">tab trpTabSimpleMenu</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/menu/gnb/default.html?dep1=0&dep2=3">GNB</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/menu/gnbActive/default.html?dep1=0&dep2=4">GNB active</a></li>
         <li><a href="/TRpackage/scriptLibrary/demo/menu/accordion/default.html?dep1=0&dep2=5">accordion menu</a></li>
