--- a/scriptLibrary/demo/menu/tabSimple/ex01.html
+++ b/scriptLibrary/demo/menu/tabSimple/ex01.html
@@ -5,14 +5,6 @@
   <title>tab_menu</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script type="text/javascript" src="../../../../asset/js/libs/trpMenu.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function(){       		
-      $(".tabs").trpTabSimple( ".btn", "on", function($index){
-        console.log("index : " + $index);
-      }).setBtn(1);    			
-    })// ready 
-  </script>
-
   <style type="text/css">		
     .tabs { display: inline-block; position:relative; margin:0; padding:0; width:800px; }
     .tabs li { display:inline; width:100%;  list-style:none; }	
@@ -32,7 +24,7 @@
 <body>
 
   <div class="tabContainer">
-    <ul class="tabs">
+    <ul class="tabs js-tabs">
       <li><a href="#first" class="btn btn0">first</a>
         <div id="first" class="cons" >
           <h2>First</h2>
@@ -68,6 +60,13 @@
       </li>
     </ul>
   </div>
+  <script type="text/javascript">
+    $(document).ready(function(){       		
+      $(".js-tabs").trpTabSimple( ".btn", "on", function($index){
+        console.log("index : " + $index);
+      }).setBtn(1);    			
+    })// ready 
+  </script>
 
   <div>--------------------------</div>
   
